--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,47 @@ body{
   font-family: Helvetica;
   text-align: center;
 }
+
+.header{
+  background-image:url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
+
+.heading{
+  font-size:70px;
+  font-weight:bold;
+  color:white;
+}
+
+.link{
+  padding-top: 40px;
+}
+
+.link a{
+  font-size:18px;
+}
+
+a{
+  color:white;
+}
+.process{
+  padding-top: 30px;
+  font-size:32px;
+  font-weight:bold;
+}
+
+img{
+  padding-top: 20px;
+}
+
+.title{
+  padding-top: 20px;
+}
+
+.title{
+  font-size:23px;
+  font-weight:bold;
+}
+
+p{
+  font-size: 14px;
+}
